Bug 311348 - back button icon in details view gets deformed
Summary: back button icon in details view gets deformed
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
: 312660 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-08 14:57 UTC by Siddhartha
Modified: 2013-01-05 20:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.7
Sentry Crash Report:


Attachments
screenshot of reported bug (72.26 KB, image/png)
2012-12-08 15:03 UTC, Siddhartha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Siddhartha 2012-12-08 14:57:56 UTC
The back button in the details view of a network interface gets deformed to a large size on mouseover.

Reproducible: Always

Steps to Reproduce:
1. click on network interface icon in system tray
2. click on network interface to view details
3. mouse over the back button
Actual Results:  
button gets deformed to a large  transparent size

Expected Results:  
button should remain in original form
Comment 1 Siddhartha 2012-12-08 15:03:37 UTC
Created attachment 75722 [details]
screenshot of reported bug
Comment 2 Lamarque V. Souza 2013-01-01 19:56:08 UTC
Git commit 7070b1089171c8c1f6fc65a08e66bed9eb02f991 by Lamarque V. Souza.
Committed on 01/01/2013 at 20:54.
Pushed by lvsouza into branch 'nm09'.

Change Plasma::PushButton to Plasma::IconWidget to workaround visual glitch.
FIXED-IN: 0.9.0.7

M  +2    -1    applet/interfacedetailswidget.cpp
M  +3    -2    applet/interfacedetailswidget.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/7070b1089171c8c1f6fc65a08e66bed9eb02f991
Comment 3 Lamarque V. Souza 2013-01-03 01:06:48 UTC
Git commit c4184af5bbb243ac15b6631314d97b27c26226b7 by Lamarque V. Souza.
Committed on 01/01/2013 at 20:54.
Pushed by lvsouza into branch 'master'.

Change Plasma::PushButton to Plasma::IconWidget to workaround visual glitch.
FIXED-IN: 0.9.0.7

M  +3    -2    applet/interfacedetailswidget.cpp
M  +2    -4    applet/interfacedetailswidget.h

http://commits.kde.org/networkmanagement/c4184af5bbb243ac15b6631314d97b27c26226b7
Comment 4 Lamarque V. Souza 2013-01-05 20:46:30 UTC
*** Bug 312660 has been marked as a duplicate of this bug. ***