Change Plasma::PushButton to Plasma::IconWidget to workaround visual glitch.

BUG: 311348
FIXED-IN: 0.9.0.7