plasma_nm_version.h
@@ -1,4 +1,4 @@
 #ifndef PLASMA_NM_VERSION_H
 #define PLASMA_NM_VERSION_H
-static const char * plasmaNmVersion = "0.9.0.6 (nm09 20121218)";
+static const char * plasmaNmVersion = "0.9.0.6 (nm09 20130101)";
 #endif
